--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Ledee : LEDee my friend. I built him." />
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Ledee by orangethirty</title>
+    <title>Ledee</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Ledee</h1>
-        <h2>LEDee my friend. I built him.</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/orangethirty/LEDee">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/orangethirty/LEDee/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/orangethirty/LEDee/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/orangethirty/LEDee" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Ledee</h1>
+          <h2 id="project_tagline">LEDee my friend. I built him.</h2>
 
-    <div class="container">
-      <section id="main_content">
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/orangethirty/LEDee/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/orangethirty/LEDee/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>LEDee is a friend.</h1>
 
 <p><em>Start having fun right now and fork LEDee.</em></p>
@@ -119,6 +122,15 @@ Loves to hang out next my Lenovo (it looks up to it).
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Ledee maintained by <a href="https://github.com/orangethirty">orangethirty</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
