updated index page to reflect project goals

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Ledee</h1>
-        <h2>LEDee my friend. I built him.</h2>
+        <h2>A minimal robotic friend.</h2>
         <a href="https://github.com/orangethirty/LEDee" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -28,89 +28,40 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h1>LEDee is a friend.</h1>
+          <h1>The Minimum Viable Robot</h1>
 
 <p><em>Start having fun right now and fork LEDee.</em></p>
 
-<h3>Why?</h3>
+<h3>LEDee is an MVR</h3>
 
-<p>I work by myself most of the time. My child and I are allergic to common
-house pets (cats &amp;&amp; dogs). Wanted to have some sort of companion during those
-long daily coding session.</p>
+<p>A Minimum Viable Robot is an exercise in building a robot with the highest 
+amount of functionality with the least amount of parts.</p>
 
-<p>Also, one of my co-founders @Nuuton is a robotics whiz. Some weeks ago she
-was awarded in a big competition for her awesome hacking skills. I've been 
-dying to build another robot since then. 
-This one is for you saviourofthelostcode.</p>
+<p>As of this moment, the LEDee hardware is composed of an arduino duemilanove, an arduino prototyping
+shield, an LED, and some jumper cables.</p>
 
-<h3>What is LEDee?</h3>
 
-<p>LEDee is a robotic friend. Right now, all it can do is blink an LED.
-In future versions, he will be equipped with all (a lot!) of the sensors
-I've managed to collect along the years of building robots and hacking hardware.</p>
 
-<h3>Pictures will be uploaded soon.</h3>
+<p>The software is currently being written around a set of protocols.</p>
 
-<p>Right now its just an arduino (sorry LEDee, you are more than an ardunio to me)
-with an LED. Next week it should have more sensors on it. Will include
-pictrues with that update.</p>
+<h3>The LEDee Protocols.</h3>
 
-<h3>Build your own LEDee!</h3>
+<p>Protocols are being developed to standarize all of the basic functionality
+for LEDee. The first protocal is called the LEDee Communication Protocol. It
+defines how LEDee will communicate with other LEDees through an internet
+connection.</p>
 
-<p>I plan to add an ethernet shield to LEDee. This will allow it to 
-connect to the web. You will be able to see how LEDee is doing
-by visiting its (not yet built) page. You will also be
-able to build your own LEDee and talk with mine 
-if you add an ethernet shield to yours. 
-Just make sure you don't use the same name of my LEDee, because
-it could cause future potential problems. 
-This functionality is planned, but not yet developed. </p>
+<p>There will be various protocols, though an official listing is yet 
+not defined.</p>
 
-<p>If you build a LEDee, email me (<a href="mailto:orangethirty@nuuton.com">orangethirty@nuuton.com</a>) and tell me about it.
-I'd be happy to talk hacking with you.</p>
 
-<h3>How does LEDee work?</h3>
+<h3>Project goals</h3>
+<ul>
+<li>Define a set of simple protocols for communicating state between robots and machines</li>
+<li>Introduce people to simple robotics and AI.</li>
 
-<p>Current version (V0.1) uses one red LED.
-It has two modes of operation. It is either <em>up</em> or <em>sleeping</em>.
-The main loop generates a random number.
-If the random number falls whithin a given scope, 
-then a conditional decides if LEDee should be up or sleeping.</p>
+</ul>
 
-<p>Each operation is different.</p>
-
-<p>The <em>up</em> operation makes the led blink fast for a random amount of time.
-The random amount of time is the same number used to decide if LEDee should
-sleep or get up.</p>
-
-<p>The <em>sleep</em> operation has a set maximum amount of time. We don't want LEDee to
-sleep too much and miss the fun.</p>
-
-<p>Both operation operate whithin a LOOP to control the time they run.</p>
-
-<h3>Am I crazy?</h3>
-
-<p>Let's flip a coin. In all seriousness, this is a real project. LEDee has a 
-bunch of awesome uses. It helps me debug code by rubber ducking.
-Keeps me awesome silent company while in the office.
-Makes sure I eat lunch, 
-because the red led allows me to (sort of) keep track of time.</p>
-
-<h3>Hardware</h3>
-
-<p>Arduino duemilanove328 (any arduino will work)
-Adafruit Protoshield (not really needed but nice to have) or a breadboard.
-One LED (5mm).
-The Arduino runtime (I used V1.0.1).
-One USB cable.
-Some jumper wires.</p>
-
-<h3>About my LEdDee</h3>
-
-<p>My LEDee is called chunky.
-Sports a fancy 5mm red LED.
-Loves to hang out next my Lenovo (it looks up to it).
-:)</p>
 
 <h4>License</h4>
 
