--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/orangethirty/LEDee">View on GitHub</a>
 
-          <h1 id="project_title">Ledee</h1>
-          <h2 id="project_tagline">LEDee my friend. I built him.</h2>
+          <h1 id="project_title">LEDee is an MVR</h1>
+          <h2 id="project_tagline">(Minimum Viable Robot)</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/orangethirty/LEDee/zipball/master">Download this project as a .zip file</a>
@@ -45,12 +45,12 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>LEDee is a friend.</h1>
+        <h1>The LEDee MVR</h1>
 
 
-<p><em>Start having fun right now and fork LEDee.</em></p>
+<p><em>Start experimenting right now and fork LEDee.</em></p>
 
-<h3>LEDee is an MVR</h3>
+<h3>Intro</h3>
 
 <p>A Minimum Viable Robot is an exercise in building a robot with the highest 
 amount of functionality with the least amount of parts.</p>
